--- a/mainapp/templates/mainapp/index.html
+++ b/mainapp/templates/mainapp/index.html
@@ -85,9 +85,10 @@
     <section class="pt-3" style="background-color: #e5e5e5;">
         <div class=" container">
             
-            <div class=" row" style=" width: 100%;" >
+            <div class=" row"  >
                 
-                <div class=" card ml-3 mr-3" style="border-radius: 0px; border: 1px solid #bbbbbb; width: 23%;">
+                <div class="col-md-3">
+                <div class=" card " style="border-radius: 0px; border: 1px solid #bbbbbb;">
                     <img class="card-img-top  "  src="{% static 'mainapp/img/bg-img/images168b.jpg' %}" alt="Card image cap">
                     <div class="card-body evt-info mb-1">
                         <a href="event.html" class="date-box evt">
@@ -100,9 +101,11 @@
                         </h3>
                     </div>
                   </div>
+                  </div>
 
+                  <div class="col-md-3">
                 <!-- Single Card Area -->
-                <div class=" card mr-3" style="border-radius: 0px; border: 1px solid #bbbbbb; width: 23%;">
+                <div class=" card " style="border-radius: 0px; border: 1px solid #bbbbbb;">
                         <img class="card-img-top" src="{% static 'mainapp/img/bg-img/event1.jpg' %}" alt="Card image cap">
                         <div class="card-body evt-info mb-1">
                             <a href="event.html" class="date-box evt">
@@ -115,9 +118,11 @@
                             </h3>
                         </div>
                       </div>
+                  </div>
 
+                  <div class="col-md-3">
                 <!-- Single Speaker Area -->
-                <div class=" card mr-3" style="border-radius: 0px; border: 1px solid #bbbbbb; width: 23%;">
+                <div class=" card" style="border-radius: 0px; border: 1px solid #bbbbbb;">
                         <img class="card-img-top" src="{% static 'mainapp/img/bg-img/event2.jpg' %}" alt="Card image cap">
                         <div class="card-body evt-info mb-1">
                             <a href="event.html" class="date-box evt">
@@ -130,9 +135,11 @@
                             </h3>
                         </div>
                       </div>
+                  </div>
 
+                  <div class="col-md-3">
                 <!-- Single Speaker Area -->
-                <div class=" card " style="border-radius: 0px; border: 1px solid #bbbbbb; width: 23%;">
+                <div class=" card " style="border-radius: 0px; border: 1px solid #bbbbbb;">
                         <img class="card-img-top" src="{% static 'mainapp/img/bg-img/event3.jpg' %}" alt="Card image cap">
                         <div class="card-body evt-info mb-1">
                             <a href="event.html" class="date-box evt">
@@ -145,7 +152,11 @@
                             </h3>
                         </div>
                       </div>
+                  </div>
 
+                
+            </div>
+            <div class="row">
                 <div class="col-12">
                     <div class="more-speaker-btn text-center mt-20 mb-40 wow fadeInUp" data-wow-delay="300ms">
                         <a class="btn confer-btn-white" href="events.html">view all Events <i class="zmdi zmdi-long-arrow-right"></i></a>
